frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecom-f
  template:
    metadata:
      labels:
        app: ecom-f
    spec:
      containers:
        - name: ecom-f
          image: kevingonzalez7997/d9_front_v1
          ports:
            - name: http
              containerPort: 3000
