frontend/fe_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dp9frontend-service-nodeport
spec:
  type: NodePort
  selector:
    app: dp9frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
