frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecom-front-service-nodeport
spec:
  type: NodePort
  selector:
    app: ecom_f
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
